# classic-domain-core

./: README.md  setup.cfg
sources/classic/criteria/: __init__.py  checks.py  criteria.py  descriptor.py  predicate_wrapping.py
sources/classic/domain/: __init__.py  criteria.py  entities.py  errors.py  invariants.py  mixins.py
sources/classic/domain/core/: __init__.py  checks.py  criteria.py  entities.py  invariants.py  predicate_wrapping.py
sources/classic/domain/core/criteria/: __init__.py  criteria.py  errors.py  predicate_wrapping.py
sources/classic/domain/core/repos/: base.py  in_memory.py
sources/classic/domain/criteria/: __init__.py  checks.py  criteria.py  predicate_wrapping.py
sources/classic/domain/repos/: __init__.py  base.py  in_memory.py  shelve.py  translate.py
tests/: conftest.py  test_criteria.py  test_entities.py  test_invariants.py  test_repo.py
